Added achievements for station visits

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 .trainButtonIcon {
 	width: 200px;
 	height: 200px;
-	background-image: url(https://media.tenor.com/P6Mmdw2AixsAAAAC/cryptoflash-tattoo.gif);
+	background-image: url(https://raw.githubusercontent.com/SamRahbar/DSBetaTrainGame/main/assets/train.gif);
 	background-size: 100%;
 }
 .trainButton {
